Fix md-dialog-container z-index

--- a/frontend/src/App/app.scss
+++ b/frontend/src/App/app.scss
@@ -97,7 +97,7 @@ md-backdrop {
 }
 
 .md-dialog-container {
-  z-index: 1201;
+  z-index: 10000;
 }
 
 .md-fab-not-raised {
